Update of SDK after after change bank check
