# model/models.ts
@@ -5,6 +5,7 @@ export * from './accountKYC';
 export * from './accountResult';
 export * from './accountUpdate';
 export * from './bankCheck';
+export * from './bankCheckResult';
 export * from './errorError';
 export * from './linkedData';
 export * from './modelError';
@@ -36,6 +37,7 @@ import { AccountKYC } from './accountKYC';
 import { AccountResult } from './accountResult';
 import { AccountUpdate } from './accountUpdate';
 import { BankCheck } from './bankCheck';
+import { BankCheckResult } from './bankCheckResult';
 import { ErrorError } from './errorError';
 import { LinkedData } from './linkedData';
 import { ModelError } from './modelError';
@@ -91,6 +93,7 @@ let typeMap: {[index: string]: any} = {
     "AccountResult": AccountResult,
     "AccountUpdate": AccountUpdate,
     "BankCheck": BankCheck,
+    "BankCheckResult": BankCheckResult,
     "ErrorError": ErrorError,
     "LinkedData": LinkedData,
     "ModelError": ModelError,
